# karpa

./: .dockerignore  Dockerfile  README.md  pyproject.toml
configs/: h100_default.json  h100_proxy.json  h100_scale.json
data/: prepare.py
docs/: phase_0_5_results.md
miner/: github_pr.py
scripts/: miner_run.py  run_h100.sh
validator/: audit.py  github_bot.py
